Adding Download CV

--- a/index.html
+++ b/index.html
@@ -234,12 +234,18 @@
               </ul>
             </div>
             <div class="resume-item">
-            <h4>See my complete experience on my cv</h4>
+              <h4>
+                <a href="#" download="CV Dierta Pasific.pdf" target="_blank">See my complete experience on my cv
+                  <i class="fas fa-download bi bi-download"></i>
+                </a> 
+              </h4>
+
             </div>
           </div>
         </div>
 
       </div>
+
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
