--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">HTML, CSS, JSD<i class="val">80%</i></span>
+              <span class="skill">HTML, CSS, JS<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -139,14 +139,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Adobe Photoshop<i class="val">85%</i></span>
+              <span class="skill">Python<i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Adobe Illutstator <i class="val">85%</i></span>
+              <span class="skill">Adobe Designs <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -235,11 +235,10 @@
             </div>
             <div class="resume-item">
               <h4>
-                <a href="#" download="CV Dierta Pasific.pdf" target="_blank">See my complete experience on my cv
+                <a href="https://drive.google.com/uc?export=download&id=18TXK6LTIw9SPLFHNWa4N914j-HLNApWi" download="CV Dierta Pasific.pdf" target="_blank">See my complete experience on my cv
                   <i class="fas fa-download bi bi-download"></i>
                 </a> 
               </h4>
-
             </div>
           </div>
         </div>
