--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         <a href="https://www.instagram.com/diertapasific/" class="instagram" target="_blank"><i class="bx bxl-instagram" ></i></a>
         <a href="https://github.com/diertapasific" class="github" target="_blank"><i class="bx bxl-github" ></i></a>
       </div>
+      
+      <a href="https://drive.google.com/uc?export=download&id=1MpvjJLZowbDqQPvTDpla7uqfC8xS4Ufl" download="your-file-name.pdf" class="btn btn-primary">Download Resume</a>
+    
     </div>
   </section><!-- End Hero -->
 
@@ -76,7 +79,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>Enthusiastic Computer Science major at Bina Nusantara University with a focus on mobile application technology. A
-          dedicated and quick learner with a passion for coding and problem-solving. Proficient in Java and C++, with a strong
+          dedicated and quick learner with a passion for coding and problem-solving. Proficient in Java and C, with a strong
           foundation in software development principles. Excited to leverage my skills to contribute to innovative tech projects
           and embrace continuous learning in a dynamic environment. Effective communicator and team player, honed through
           collaborative coursework.</p>
@@ -84,7 +87,7 @@
           <p>Dedicated to staying at the forefront of technological advancements, I actively seek opportunities to expand my skill
           set and embrace emerging trends in mobile application development. With a relentless drive for excellence, I approach
           challenges with a problem-solving mindset, always striving to deliver efficient and elegant solutions. My proficiency in
-          Java and C++ is underpinned by a deep understanding of software development principles, making me well-equipped to
+          Java and C is underpinned by a deep understanding of software development principles, making me well-equipped to
           tackle complex coding tasks and drive innovation. I am eager to collaborate with like-minded individuals and contribute
           to cutting-edge tech initiatives, leveraging my effective communication skills and innate teamwork abilities cultivated
           through successful coursework collaborations.</p>
@@ -102,54 +105,35 @@
 
         <div class="row skills-content">
 
-          <div class="col-lg-6">
-
+          <div class="col">
             <div class="progress">
-              <span class="skill">Java<i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <span class="skill">Java<i class="val"></i></span>
+              <p class="skill-description">Intermediate Level</p>
             </div>
-
             <div class="progress">
-              <span class="skill">C<i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <span class="skill">C<i class="val"></i></span>
+              <p class="skill-description">Advanced Level</p>
             </div>
-
             <div class="progress">
-              <span class="skill">HTML, CSS, JS<i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <span class="skill">HTML, CSS, JS<i class="val"></i></span>
+              <p class="skill-description">Intermediate Level</p>
             </div>
 
           </div>
 
-          <div class="col-lg-6">
-
+          <div class="col">
             <div class="progress">
-              <span class="skill">SQL<i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+                <span class="skill">SQL<i class="val"></i></span>
+                <p class="skill-description">Beginner Level</p>
             </div>
-
             <div class="progress">
-              <span class="skill">Python<i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+                <span class="skill">Python<i class="val"></i></span>
+                <p class="skill-description">Beginner Level</p>
             </div>
-
             <div class="progress">
-              <span class="skill">Adobe Designs <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+                <span class="skill">Adobe Designs<i class="val"></i></span>
+                <p class="skill-description">Intermediate Level</p>
             </div>
-
           </div>
 
         </div>
@@ -233,7 +217,7 @@
             </div>
             <div class="resume-item">
               <h4>
-                <a href="https://drive.google.com/uc?export=download&id=18TXK6LTIw9SPLFHNWa4N914j-HLNApWi" download="CV Dierta Pasific.pdf" target="_blank">See my complete experience on my cv
+                <a href="https://drive.google.com/uc?export=download&id=1MpvjJLZowbDqQPvTDpla7uqfC8xS4Ufl" download="CV Dierta Pasific.pdf" target="_blank">See complete experience on my cv
                   <i class="fas fa-download bi bi-download"></i>
                 </a> 
               </h4>
