Updating downloadable files, Adding Download Portfolio Button, Adding Project Assets

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dierta Pasific Portfolio</title>
+  <title>Dierta Pasific | Personal Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -65,7 +65,7 @@
         <a href="https://github.com/diertapasific" class="github" target="_blank"><i class="bx bxl-github" ></i></a>
       </div>
       
-      <a href="https://drive.google.com/uc?export=download&id=1MpvjJLZowbDqQPvTDpla7uqfC8xS4Ufl" download="CV Dierta Pasific.pdf" class="btn btn-primary">Download Resume</a>
+      <a href="https://drive.google.com/uc?export=download&id=1zdPgnsE3V6eEHTEL5iZfv9MTH5LKaGat" download="CV Dierta Pasific.pdf" class="btn btn-primary">Download Resume</a>
     
     </div>
   </section><!-- End Hero -->
@@ -147,12 +147,11 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Dierta Pasific</h4>
               <p><em>Curious and dedicated Computer Science major at Bina Nusantara University with a passion for mobile app technology,
@@ -169,7 +168,11 @@
               <h4>Computer Science</h4>
               <h5>2021 - Present</h5>
               <p><em>Bina Nusantara University, Bandung, Indonesia</em></p>
-              <p>GPA: 3.8 / 4.00 (Summa Cumlaude)</p>
+              <ul>
+                <li>GPA: 3.8 / 4.00 (Summa Cumlaude)</li>
+                <li>Participated in The 2022 ICPC Asia Jakarta</li>
+                <li>Participated in The 2021 ICPC Asia Jakarta</li>
+              </ul>
             </div>
 
             <h3 class="resume-title">Working Experience</h3>
@@ -200,9 +203,9 @@
               <h5>Jul 2022 - Sep 2022</h5>
               <p><em>Bandung, Indonesia</em></p>
               <ul>
-                <li>Mengajarkan</li>
-                <li>Mengajarkan</li>
-                <li>Mengajarkan</li>
+                <li>Facilitated the seamless transition of 50+ freshmen, offering them guidance, support, and valuable insights to help them acclimate to campus life.</li>
+                <li>Ensured they followed the guidelines but also to create a positive and enjoyable atmosphere</li>
+                <li>Participated in Bina Nusantara University year-long orientation program designed to ease freshmen into university life.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -217,7 +220,7 @@
             </div>
             <div class="resume-item">
               <h4>
-                <a href="https://drive.google.com/uc?export=download&id=1MpvjJLZowbDqQPvTDpla7uqfC8xS4Ufl" download="CV Dierta Pasific.pdf" target="_blank">See complete experience on my cv
+                <a href="https://drive.google.com/uc?export=download&id=1zdPgnsE3V6eEHTEL5iZfv9MTH5LKaGat" download="" target="_blank">See complete experience on my cv
                   <i class="fas fa-download bi bi-download"></i>
                 </a> 
               </h4>
@@ -235,7 +238,6 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -250,9 +252,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portofolio_1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
+                <h4>Money Manager App</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details-money-manager.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -261,6 +263,19 @@
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>News and Ticket App</h4>
+                <div class="portfolio-links">
+                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portofolio_3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>News and Ticket App</h4>
                 <div class="portfolio-links">
@@ -348,19 +363,11 @@
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
-                <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="btn-portfolio">
+          <a href="https://drive.google.com/uc?export=download&id=16zYQI1P0pvhxejNbVKJ_Mo3rus5qQRhm"
+            download="CV Dierta Pasific.pdf" class="btn btn-primary ">Download Portfolio</a>
         </div>
 
       </div>
