Updating Portfolio Details

--- a/portfolio-details-bluejack-2.html
+++ b/portfolio-details-bluejack-2.html
@@ -47,7 +47,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <img src="assets/img/portfolio/Money_Manager_App.png "
+            <img src="assets/img/portfolio/Bluejack_2_App.png "
               class="swiper-slide" alt="">
           </div>
 
@@ -55,26 +55,25 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name:</strong> SaveUp Application</li>
-                <li><strong>TechStack:</strong> Android Studio, Java, Figma</li>
+                <li><strong>Name:</strong> Bluejack 2.0</li>
+                <li><strong>TechStack:</strong> Android Studio, Java</li>
                 <li><strong>Role:</strong> Android Developer, UI Designer</li>
                 <li><strong>Year:</strong> 2023</li>
-                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/MoneyManagerApp" target="_blank">Click Here</a></li>
+                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/Bluejack-Pharmacy-2.0" target="_blank">Click Here</a></li>
               </ul>
             </div>
             
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                SaveUp is an Android Java application designed to empower users to manage their finances efficiently. It offers income
-                and expense tracking, budgeting tools, goal setting, and robust security features, all while providing a user-friendly
-                experience to help users achieve their financial objectives. 
-                <br><br>
-                For income management, users can effortlessly record
-                various sources of revenue, ranging from regular salary payments to occasional bonuses and other income streams. Each
-                entry allows users to specify the amount, date, and even add supplementary notes, ensuring a thorough record of their
-                financial inflow. Expense tracking within SaveUp is equally comprehensive and user-centric. Users can categorize their
-                expenses into predefined categories.
+                Bluejack Pharmacy is more than just a shopping platform. it's a health companion. Before granting access, the app
+                ensures a robust layer of security through OTP (One-Time Password) authentication sent to your SMS application. This
+                step ensures that only authorized users can access the app, adding an extra layer of protection to your health data.
+                Once authenticated, users can seamlessly explore a vast medicine list, complete with detailed product information,
+                dosage instructions, and competitive pricing. The app also offers an integrated e-commerce experience, allowing you to
+                add medicines to your cart, securely complete online transactions, and have your orders delivered to your doorstep. The
+                app maintains a comprehensive transaction history, giving you the power to review your medication purchases and stay
+                organized.
               </p>
             </div>
           </div>
