--- a/portfolio-details-news-ticket.html
+++ b/portfolio-details-news-ticket.html
@@ -47,7 +47,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <img src="assets/img/portfolio/Money_Manager_App.png "
+            <img src="assets/img/portfolio/News_Ticket_App.png "
               class="swiper-slide" alt="">
           </div>
 
@@ -55,26 +55,26 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name:</strong> SaveUp Application</li>
+                <li><strong>Name:</strong> Ferrari F1</li>
                 <li><strong>TechStack:</strong> Android Studio, Java, Figma</li>
                 <li><strong>Role:</strong> Android Developer, UI Designer</li>
                 <li><strong>Year:</strong> 2023</li>
-                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/MoneyManagerApp" target="_blank">Click Here</a></li>
+                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/News_and_Ticket_App" target="_blank">Click Here</a></li>
               </ul>
             </div>
             
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                SaveUp is an Android Java application designed to empower users to manage their finances efficiently. It offers income
-                and expense tracking, budgeting tools, goal setting, and robust security features, all while providing a user-friendly
-                experience to help users achieve their financial objectives. 
+                One of the standout features of the app is the season/year schedule, which offers users a detailed overview of the F1
+                racing calendar. Fans can easily access race dates, locations, and timings, ensuring they are well-informed about when
+                and where their beloved Ferrari team will be competing. 
                 <br><br>
-                For income management, users can effortlessly record
-                various sources of revenue, ranging from regular salary payments to occasional bonuses and other income streams. Each
-                entry allows users to specify the amount, date, and even add supplementary notes, ensuring a thorough record of their
-                financial inflow. Expense tracking within SaveUp is equally comprehensive and user-centric. Users can categorize their
-                expenses into predefined categories.
+                What sets this app apart is the seamless integration of ticket
+                purchasing directly from the schedule page. Users can secure their tickets to watch Ferrari and other F1 teams in action
+                without the hassle of navigating multiple platforms. 
+                Furthermore, the app also offers a dedicated transaction history
+                page, providing users with a transparent view of their ticket purchases and financial transactions made through the app.
               </p>
             </div>
           </div>
