--- a/portfolio-details-public-transportation.html
+++ b/portfolio-details-public-transportation.html
@@ -47,7 +47,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <img src="assets/img/portfolio/Money_Manager_App.png "
+            <img src="assets/img/portfolio/Public_Transportation_App.png "
               class="swiper-slide" alt="">
           </div>
 
@@ -55,26 +55,25 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name:</strong> SaveUp Application</li>
+                <li><strong>Name:</strong> Gaskeunn</li>
                 <li><strong>TechStack:</strong> Android Studio, Java, Figma</li>
                 <li><strong>Role:</strong> Android Developer, UI Designer</li>
                 <li><strong>Year:</strong> 2023</li>
-                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/MoneyManagerApp" target="_blank">Click Here</a></li>
+                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/Gaskeunn" target="_blank">Click Here</a></li>
               </ul>
             </div>
             
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                SaveUp is an Android Java application designed to empower users to manage their finances efficiently. It offers income
-                and expense tracking, budgeting tools, goal setting, and robust security features, all while providing a user-friendly
-                experience to help users achieve their financial objectives. 
-                <br><br>
-                For income management, users can effortlessly record
-                various sources of revenue, ranging from regular salary payments to occasional bonuses and other income streams. Each
-                entry allows users to specify the amount, date, and even add supplementary notes, ensuring a thorough record of their
-                financial inflow. Expense tracking within SaveUp is equally comprehensive and user-centric. Users can categorize their
-                expenses into predefined categories.
+                Gaskeunn is a versatile Android Java application that serves as your all-in-one solution for efficient public
+                transportation navigation and staying updated on global news. With its intuitive interface, this app simplifies the
+                process of planning your journey on public transit. Users can easily choose their destination from their current
+                location, ensuring a smooth and hassle-free travel experience whether you're a daily commuter or an occasional traveler.
+                But Gaskeunn goes beyond just helping you get around. It also keeps you well-informed about the latest developments and
+                news from around the world. Stay up-to-date with breaking news, current events, and global stories, all conveniently
+                accessible within the app. With Gaskeunn, you can stay connected to the world while you plan your route, making it an
+                essential tool for those who value both efficient navigation and staying in the know.
               </p>
             </div>
           </div>
