--- a/portfolio-details-push-news.html
+++ b/portfolio-details-push-news.html
@@ -47,7 +47,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <img src="assets/img/portfolio/Money_Manager_App.png "
+            <img src="assets/img/portfolio/Push_News_App.png "
               class="swiper-slide" alt="">
           </div>
 
@@ -55,26 +55,24 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name:</strong> SaveUp Application</li>
-                <li><strong>TechStack:</strong> Android Studio, Java, Figma</li>
+                <li><strong>Name:</strong> PushNewsHub</li>
+                <li><strong>TechStack:</strong> Android Studio, Java</li>
                 <li><strong>Role:</strong> Android Developer, UI Designer</li>
                 <li><strong>Year:</strong> 2023</li>
-                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/MoneyManagerApp" target="_blank">Click Here</a></li>
+                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/PushNewsHub" target="_blank">Click Here</a></li>
               </ul>
             </div>
             
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                SaveUp is an Android Java application designed to empower users to manage their finances efficiently. It offers income
-                and expense tracking, budgeting tools, goal setting, and robust security features, all while providing a user-friendly
-                experience to help users achieve their financial objectives. 
-                <br><br>
-                For income management, users can effortlessly record
-                various sources of revenue, ranging from regular salary payments to occasional bonuses and other income streams. Each
-                entry allows users to specify the amount, date, and even add supplementary notes, ensuring a thorough record of their
-                financial inflow. Expense tracking within SaveUp is equally comprehensive and user-centric. Users can categorize their
-                expenses into predefined categories.
+                The Push News Hub app is a dynamic Android Java application that revolutionizes the way users receive news updates.
+                Powered by Firebase's push notification capabilities, this app ensures that you never miss an important headline or
+                breaking story. Whenever significant news breaks, you'll receive instant push notifications directly on your device,
+                keeping you in the loop, no matter where you are. But that's just the beginning. The app also provides access to a vast
+                repository of news articles, offering an extensive library of 100 news stories sourced from APIs. With a user-friendly
+                interface, you can easily browse and explore these articles, staying informed about the latest developments in a variety
+                of areas.
               </p>
             </div>
           </div>
