--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Money_Manager_Thumbnail.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Money Manager App</h4>
+                <h4>SaveUp</h4>
                 <div class="portfolio-links">
                   <a href="portfolio-details-money-manager.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -262,11 +262,24 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/News_Ticket_Thumbnail.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
+                <h4>Ferrari F1</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="portfolio-details-news-ticket.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Public_Transportation_Thumbnail.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Gaskeunn</h4>
+                <div class="portfolio-links">
+                  <a href="portfolio-details-public-transportation.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -275,89 +288,37 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_3.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Bluejack_1_Thumbnail.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
+                <h4>Bluejack 1.0</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="portfolio-details-bluejack-1.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+      
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Bluejack_2_Thumbnail.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Bluejack 2.0</h4>
+                <div class="portfolio-links">
+                  <a href="portfolio-details-bluejack-2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
-
+          
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Push_News_Thumbnail.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
+                <h4>PushNewsHub</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
-                <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
-                <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
-                <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
-                <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portofolio_4.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>News and Ticket App</h4>
-                <div class="portfolio-links">
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="portfolio-details-push-news.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
