--- a/portfolio-details-bluejack-1.html
+++ b/portfolio-details-bluejack-1.html
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body style="overflow: hidden;">
+<body style="overflow: hidden;" class="port-detail">
 
   <main id="main">
 
@@ -47,7 +47,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <img src="assets/img/portfolio/Money_Manager_App.png "
+            <img src="assets/img/portfolio/Bluejack_1_App.png "
               class="swiper-slide" alt="">
           </div>
 
@@ -55,26 +55,24 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Name:</strong> SaveUp Application</li>
-                <li><strong>TechStack:</strong> Android Studio, Java, Figma</li>
+                <li><strong>Name:</strong> Bluejack 1.0</li>
+                <li><strong>TechStack:</strong> Android Studio, Java</li>
                 <li><strong>Role:</strong> Android Developer, UI Designer</li>
                 <li><strong>Year:</strong> 2023</li>
-                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/MoneyManagerApp" target="_blank">Click Here</a></li>
+                <li><strong>Project URL:</strong> <a href="https://github.com/diertapasific/BluejackPharmacy_1.0" target="_blank">Click Here</a></li>
               </ul>
             </div>
             
             <div class="portfolio-description">
               <h2>Project Description</h2>
               <p>
-                SaveUp is an Android Java application designed to empower users to manage their finances efficiently. It offers income
-                and expense tracking, budgeting tools, goal setting, and robust security features, all while providing a user-friendly
-                experience to help users achieve their financial objectives. 
+                With a user-friendly interface, Bluejack Pharmacy offers a seamless experience for users looking to access a
+                comprehensive medicine list, make secure purchases, and maintain a record of their transactions. Explore a vast and
+                carefully curated medicine list within the app, ensuring you have access to a wide range of medications. 
                 <br><br>
-                For income management, users can effortlessly record
-                various sources of revenue, ranging from regular salary payments to occasional bonuses and other income streams. Each
-                entry allows users to specify the amount, date, and even add supplementary notes, ensuring a thorough record of their
-                financial inflow. Expense tracking within SaveUp is equally comprehensive and user-centric. Users can categorize their
-                expenses into predefined categories.
+                With integrated e-commerce functionality, you can effortlessly add medicines to your cart, complete secure online
+                transactions, and have your orders delivered right to your doorstep. It's never been easier to get the healthcare
+                products you need, when you need them.
               </p>
             </div>
           </div>
