--- a/portfolio-details-public-transportation.html
+++ b/portfolio-details-public-transportation.html
@@ -41,7 +41,7 @@
 
           <div class="col-lg-8">
             <img src="assets/img/portfolio/Public_Transportation_app.png "
-              class="swiper-slide" alt="">
+              class="swiper-slide" alt="Error Image">
           </div>
 
           <div class="col-lg-4">
