--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <div class="portfolio-info">
                 <h4>SaveUp</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details-money-manager.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details-money-manager.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -257,8 +257,8 @@
               <div class="portfolio-info">
                 <h4>Ferrari F1</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details-news-ticket.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details-news-ticket.html" 
+                   title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -270,7 +270,7 @@
               <div class="portfolio-info">
                 <h4>Gaskeunn</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details-public-transportation.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="portfolio-details-public-transportation.html" 
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -283,8 +283,7 @@
               <div class="portfolio-info">
                 <h4>Bluejack 1.0</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details-bluejack-1.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details-bluejack-1.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -296,7 +295,7 @@
               <div class="portfolio-info">
                 <h4>Bluejack 2.0</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details-bluejack-2.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="portfolio-details-bluejack-2.html" 
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -309,7 +308,7 @@
               <div class="portfolio-info">
                 <h4>PushNewsHub</h4>
                 <div class="portfolio-links">
-                  <a href="portfolio-details-push-news.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="portfolio-details-push-news.html" 
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -341,7 +340,7 @@
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- You can delete the links only if you purchased the pro version. -->A
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
