--- a/portfolio-details-bluejack-1.html
+++ b/portfolio-details-bluejack-1.html
@@ -35,6 +35,9 @@
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
+
+    <a href="index.html#portfolio" title="" style="margin-left: 50px;" class="display-6"><i class="bx bx-arrow-back"></i></a>
+      
       <div class="container">
 
         <div class="row gy-4">
