--- a/portfolio-details-news-ticket.html
+++ b/portfolio-details-news-ticket.html
@@ -34,6 +34,10 @@
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
+
+      <a href="index.html#portfolio" title="" style="margin-left: 50px;" class="display-6"><i
+          class="bx bx-arrow-back"></i></a>
+
       <div class="container">
 
         <div class="row gy-4">
