Updating Portfolio Detail Page, Cleaning CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-<link rel="icon" href="/assets/img/logo-img.png" type="image/png">
+  <link rel="icon" href="/assets/img/logo-img.png" type="image/png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -98,6 +98,10 @@
 
           <div class="col">
             <div class="progress">
+              <span class="skill">Android Studio<i class="val"></i></span>
+              <p class="skill-description">Intermediate Level</p>
+            </div>
+            <div class="progress">
               <span class="skill">Java<i class="val"></i></span>
               <p class="skill-description">Intermediate Level</p>
             </div>
@@ -113,6 +117,10 @@
           </div>
 
           <div class="col">
+            <div class="progress">
+              <span class="skill">Swift (ios) <i class="val"></i></span>
+              <p class="skill-description">Beginner Level</p>
+            </div>
             <div class="progress">
                 <span class="skill">SQL<i class="val"></i></span>
                 <p class="skill-description">Beginner Level</p>
@@ -161,8 +169,9 @@
               <p><em>Bina Nusantara University, Bandung, Indonesia</em></p>
               <ul>
                 <li>GPA: 3.8 / 4.00 (Summa Cumlaude)</li>
-                <li>Participated in The 2022 ICPC Asia Jakarta</li>
-                <li>Participated in The 2021 ICPC Asia Jakarta</li>
+                <li>Participated in The 2021 & 2022 ICPC Asia Jakarta</li>
+                <li>Participated in ASEAN Data Sciene Explorer 2022</li>
+                
               </ul>
             </div>
 
