--- a/portfolio-details-news-ticket.html
+++ b/portfolio-details-news-ticket.html
@@ -5,13 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Money Manager App</title>
+  <title>Portfolio Details | Ferrari F1</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="/assets/img/logo-img.png" type="image/png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -35,8 +34,10 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
 
-      <a href="index.html#portfolio" title="" style="margin-left: 50px;" class="display-6"><i
-          class="bx bx-arrow-back"></i></a>
+      <div class="back-button">
+          <a href="index.html#portfolio" title="" style="margin-left: 50px;" class="display-6 "><i class="bx bx-arrow-back"></i></a>
+      </div>
+      
 
       <div class="container">
 
